<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_fragment_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
...
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/FullNamePlaceholder"
                            app:boxBackgroundColor="@android:color/transparent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/id_profile_name_edittext"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:drawableStart="@drawable/ic_contact"
                                android:drawablePadding="10dp"
                                android:enabled="false"
...
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/emailPlaceholder"
                            app:boxBackgroundColor="@android:color/transparent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/id_profile_email_edittext"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:backgroundTintMode="add"
                                android:drawableStart="@drawable/ic_profile_email"
                                android:drawablePadding="10dp"
...
                                    android:paddingStart="20dp"
                                    android:paddingEnd="0dp"
                                    android:text=""
                                    android:textStyle="bold" />

                                <Button
                                    android:id="@+id/id_birthday_button"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/select_birthday"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="@+id/id_profile_birthday_edittext"
...
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            tools:context=".view.activity.admin.ItemsAdminActivity">

                            <ImageButton
                                android:id="@+id/id_add_profile_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="25dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/ic_add_36"
...
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/id_add_profile_button">

                                <androidx.recyclerview.widget.RecyclerView
                                    android:id="@+id/id_recycler_profile_list"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:scrollbars="vertical"
                                    app:layoutManager="LinearLayoutManager" />

                            </RelativeLayout>

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/id_update_infos_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/update_infos" />

                    <Button
                        android:id="@+id/id_logout_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/logout_button_text" />

                </LinearLayout>

...
