...
            android:background="#E6E6E6"
            android:padding="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/id_confirm_add_item_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_check_24"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/id_edittext_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/profile_name_edit_Text"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/id_confirm_add_item_button"
...
